Add apps, remove cruft, refactor
Whew, this is a big commit. Let's walk through it:

- Added changedetection.io, Heimdall, Home Assistant, mosquitto, and zigbee2mqtt
- Removed seedling and vyos - I'm not using them anymore
- Added a new area for host-specific tasks
- Moved ZFS config to the Proxmox role
- Reworked the ZFS role to simply be enabling the key load service
- Fixed some lingering differences between old and new NFS client config

--- a/host_vars/dmz-apps.yml
+++ b/host_vars/dmz-apps.yml
@@ -1,10 +1,12 @@
 ---
 # NFS directories mounted on file server
 nfs_dirs:
-  - path: /ssd/dmz/app
+  - server: 10.0.0.2
+    path: /ssd/dmz/app
     user: dmz-doc
     group: dmz-doc
-  - path: /ssd/app/games
+  - server: 10.0.0.2
+    path: /ssd/app/games
     user: root
     group: root
 # Users/groups for nfs server
