--- a/.config/ansible-lint.yml
+++ b/.config/ansible-lint.yml
@@ -3,3 +3,4 @@ skip_list:
   - fqcn-builtins # Shorter names look much cleaner
   - no-handler # Handlers are useful, but split up the code flow too much when
                # their extra features aren't needed
+  - var-naming[no-role-prefix] # The Proxmox role requires specific names
