--- a/templates/app01/traefik.yml
+++ b/templates/app01/traefik.yml
@@ -29,9 +29,11 @@ services:
 
     labels:
       - traefik.enable=true
-      - traefik.http.routers.api.rule=Host(`tr.{{ tertiary_domain }}`)
+      - traefik.http.routers.api.rule=Host(`proxy.{{ tertiary_domain }}`)
       - traefik.http.routers.api.entrypoints=https
       - traefik.http.routers.api.tls.certresolver=default
       - traefik.http.routers.api.service=api@internal
       - traefik.http.routers.api.middlewares=auth
       - traefik.http.middlewares.auth.basicauth.users=${TRAEFIK_USERS}
+      # Below will cause Traefik to request a wildcard cert
+      - traefik.http.routers.api.tls.domains[0].main=*.{{ tertiary_domain }}
