--- a/templates/app01/changedetection.yml
+++ b/templates/app01/changedetection.yml
@@ -2,6 +2,7 @@ version: "3.7"
 
 networks:
   web:
+  changedetection:
 
 services:
   changedetection:
@@ -11,11 +12,18 @@ services:
 
     networks:
       - web
+      - changedetection
 
     environment:
       BASE_URL: https://change.{{ tertiary_domain }}/
-      # USE_X_SETTINGS: 1
+      USE_X_SETTINGS: 1
       # HIDE_REFERER: true
+      # LOGGER_LEVEL: DEBUG
+      PLAYWRIGHT_DRIVER_URL: ws://playwright-chrome:3000/?stealth=1
+
+    depends_on:
+      playwright-chrome:
+        condition: service_started
 
     volumes:
       - {{ app_root }}/changedetction:/datastore
@@ -26,20 +34,9 @@ services:
       traefik.http.routers.change.entrypoints: https
       traefik.http.routers.change.tls.certresolver: default
       traefik.http.services.change.loadbalancer.server.port: 5000
+      traefik.http.routers.change.middlewares: traefik-forward-auth
 
-# Configurable proxy list support, see https://github.com/dgtlmoon/changedetection.io/wiki/Proxy-configuration#proxy-list-support
-#        - ./proxies.json:/datastore/proxies.json
-
-  #    environment:
-  #        Default listening port, can also be changed with the -p option
-  #      - PORT=5000
-
-  #      - PUID=1000
-  #      - PGID=1000
-  #
-  #        Log levels are in descending order. (TRACE is the most detailed one)
-  #        Log output levels: TRACE, DEBUG(default), INFO, SUCCESS, WARNING, ERROR, CRITICAL
-  #      - LOGGER_LEVEL=DEBUG
+  #      - 
   #
   #       Alternative WebDriver/selenium URL, do not use "'s or 's!
   #      - WEBDRIVER_URL=http://browser-chrome:4444/wd/hub
@@ -83,32 +80,37 @@ services:
      
      # If WEBDRIVER or PLAYWRIGHT are enabled, changedetection container depends on that
      # and must wait before starting (substitute "browser-chrome" with "playwright-chrome" if last one is used)
-#    depends_on:
-#        browser-chrome:
-#            condition: service_started
+
 
      # Used for fetching pages via Playwright+Chrome where you need Javascript support.
      # Note: Playwright/browserless not supported on ARM type devices (rPi etc)
      # RECOMMENDED FOR FETCHING PAGES WITH CHROME
-#    playwright-chrome:
-#        hostname: playwright-chrome
-#        image: browserless/chrome:1.60-chrome-stable
-#        restart: unless-stopped
-#        environment:
-#            - SCREEN_WIDTH=1920
-#            - SCREEN_HEIGHT=1024
-#            - SCREEN_DEPTH=16
-#            - ENABLE_DEBUGGER=false
-#            - PREBOOT_CHROME=true
-#            - CONNECTION_TIMEOUT=300000
-#            - MAX_CONCURRENT_SESSIONS=10
-#            - CHROME_REFRESH_TIME=600000
-#            - DEFAULT_BLOCK_ADS=true
-#            - DEFAULT_STEALTH=true
-#
-#             Ignore HTTPS errors, like for self-signed certs
-#            - DEFAULT_IGNORE_HTTPS_ERRORS=true
-#
+  playwright-chrome:
+    container_name: playwright-chrome
+    image: browserless/chrome:1.60-chrome-stable
+    restart: unless-stopped
+
+    networks:
+      - changedetection
+
+    environment:
+      SCREEN_WIDTH: 1920
+      SCREEN_HEIGHT: 1024
+      SCREEN_DEPTH: 16
+      ENABLE_DEBUGGER: false
+      PREBOOT_CHROME: true
+      CONNECTION_TIMEOUT: 300000
+      MAX_CONCURRENT_SESSIONS: 10
+      CHROME_REFRESH_TIME: 600000
+      DEFAULT_BLOCK_ADS: true
+      DEFAULT_STEALTH: true
+
+    labels:
+      traefik.enable: false
+
+          #   Ignore HTTPS errors, like for self-signed certs
+          #  - DEFAULT_IGNORE_HTTPS_ERRORS=true
+
 
      # Used for fetching pages via Playwright+Chrome where you need Javascript support.
      # Note: Works well but is deprecated, does not fetch full page screenshots (doesnt work with Visual Selector)
