--- a/templates/apps/core.yml
+++ b/templates/apps/core.yml
@@ -83,23 +83,23 @@ services:
       - traefik.http.services.nc.loadbalancer.server.port=80
 
 
-  cyberchef:
-    container_name: cyberchef
-    image: mpepping/cyberchef
-    restart: unless-stopped
+  # cyberchef:
+  #   container_name: cyberchef
+  #   image: mpepping/cyberchef
+  #   restart: unless-stopped
 
-    networks:
-      - web
+  #   networks:
+  #     - web
 
-    environment:
-      - TZ={{ timezone }}
+  #   environment:
+  #     - TZ={{ timezone }}
 
-    labels:
-      - traefik.enable=true
-      - traefik.http.routers.cc.rule=Host(`cc.{{ primary_domain }}`)
-      - traefik.http.routers.cc.entrypoints=https
-      - traefik.http.routers.cc.tls.certresolver=default
-      - traefik.http.services.cc.loadbalancer.server.port=8000
+  #   labels:
+  #     - traefik.enable=true
+  #     - traefik.http.routers.cc.rule=Host(`cc.{{ primary_domain }}`)
+  #     - traefik.http.routers.cc.entrypoints=https
+  #     - traefik.http.routers.cc.tls.certresolver=default
+  #     - traefik.http.services.cc.loadbalancer.server.port=8000
 
 
   tailscale_dns:
