--- a/roles/dotfiles_clone/tasks/main.yml
+++ b/roles/dotfiles_clone/tasks/main.yml
@@ -4,7 +4,7 @@
   become: true
   become_user: "{{ user }}"
   git:
-    repo: https://gt.{{ primary_domain }}/subract/dotfiles.git # noqa latest
+    repo: https://git.{{ tertiary_domain }}/subract/dotfiles.git # noqa latest
     dest: /home/{{ user }}/.dotfiles
 
 - name: Symlink dots
