--- a/templates/app01/miniflux.yml
+++ b/templates/app01/miniflux.yml
@@ -36,6 +36,7 @@ services:
       traefik.http.routers.rss.entrypoints: https
       traefik.http.routers.rss.tls.certresolver: default
       traefik.http.services.rss.loadbalancer.server.port: 8080
+      traefik.http.routers.rss.middlewares: authelia
 
   db:
     container_name: miniflux_db
