--- a/templates/app01/home_automation.yml
+++ b/templates/app01/home_automation.yml
@@ -32,6 +32,7 @@ services:
       traefik.http.routers.home.entrypoints: https
       traefik.http.routers.home.tls.certresolver: default
       traefik.http.services.home.loadbalancer.server.port: 8123
+      traefik.http.routers.home.middlewares: authelia
 
   mosquitto:
     container_name: mosquitto
@@ -73,3 +74,4 @@ services:
       traefik.http.routers.zigbee.entrypoints: https
       traefik.http.routers.zigbee.tls.certresolver: default
       traefik.http.services.zigbee.loadbalancer.server.port: 8080
+      traefik.http.routers.zigbee.middlewares: authelia
