--- a/templates/app01/git.yml
+++ b/templates/app01/git.yml
@@ -36,6 +36,8 @@ services:
       traefik.http.routers.git.entrypoints: https
       traefik.http.routers.git.tls.certresolver: default
       traefik.http.services.git.loadbalancer.server.port: 80
+      traefik.http.routers.git.middlewares: authelia
+
 
 
   drone:
@@ -63,6 +65,7 @@ services:
       traefik.http.routers.drone.entrypoints: https
       traefik.http.routers.drone.tls.certresolver: default
       traefik.http.services.drone.loadbalancer.server.port: 80
+      traefik.http.routers.drone.middlewares: authelia
 
 
   runner:
@@ -82,7 +85,3 @@ services:
 
     volumes:
     - /var/run/docker.sock:/var/run/docker.sock
-
-    labels:
-      traefik.enable: false
-
