--- a/templates/web02/dashy.yml
+++ b/templates/web02/dashy.yml
@@ -39,7 +39,7 @@ services:
       NODE_ENV: production
 
     volumes:
-      - /opt/dashy/configuration.yml:/app/public/conf.yml
+      - /opt/dashy/configuration.yml:/app/public/conf.yml:ro
 
     healthcheck:
       test: ['CMD', 'node', '/app/services/healthcheck']
@@ -67,7 +67,7 @@ services:
       NODE_ENV: production
 
     volumes:
-      - /opt/dashy-keycloak/configuration.yml:/app/public/conf.yml
+      - /opt/dashy-keycloak/configuration.yml:/app/public/conf.yml:ro
 
     healthcheck:
       test: ['CMD', 'node', '/app/services/healthcheck']
