--- a/templates/app01/auth.yml
+++ b/templates/app01/auth.yml
@@ -37,6 +37,11 @@ services:
       traefik.http.routers.ldap.entrypoints: https
       traefik.http.routers.ldap.tls.certresolver: default
       traefik.http.services.ldap.loadbalancer.server.port: 17170
+      homepage.group: Admin
+      homepage.name: lldap
+      homepage.icon: mdi-account-supervisor
+      homepage.href: https://ldap.{{ tertiary_domain }}/
+      homepage.description: User management
 
 
   authelia:
@@ -83,6 +88,11 @@ services:
       # traefik.http.middlewares.authelia-basic.forwardAuth.address: http://authelia:9091/api/verify?auth=basic
       # traefik.http.middlewares.authelia-basic.forwardAuth.trustForwardHeader: true
       # traefik.http.middlewares.authelia-basic.forwardAuth.authResponseHeaders: Remote-User,Remote-Groups,Remote-Name,Remote-Email
+      homepage.group: Admin
+      homepage.name: Authelia
+      homepage.icon: authelia.png
+      homepage.href: https://auth.{{ tertiary_domain }}/
+      homepage.description: Auth services
 
 
   authelia_redis:
