--- a/templates/app01/cyberchef.yml
+++ b/templates/app01/cyberchef.yml
@@ -22,3 +22,8 @@ services:
       traefik.http.routers.chef.entrypoints: https
       traefik.http.routers.chef.tls.certresolver: default
       traefik.http.services.chef.loadbalancer.server.port: 8000
+      homepage.group: Apps
+      homepage.name: CyberChef
+      homepage.icon: cyberchef.png
+      homepage.href: https://chef.{{ tertiary_domain }}/
+      homepage.description: Swiss army knife
