--- a/templates/app01/immich.yml
+++ b/templates/app01/immich.yml
@@ -24,11 +24,16 @@ services:
     restart: unless-stopped
 
     labels:
-      - traefik.enable=true
-      - traefik.http.routers.pic.rule=Host(`pic.{{ tertiary_domain }}`)
-      - traefik.http.routers.pic.entrypoints=https
-      - traefik.http.routers.pic.tls.certresolver=default
-      - traefik.http.services.pic.loadbalancer.server.port=3001
+      traefik.enable: true
+      traefik.http.routers.pic.rule: Host(`pic.{{ tertiary_domain }}`)
+      traefik.http.routers.pic.entrypoints: https
+      traefik.http.routers.pic.tls.certresolver: default
+      traefik.http.services.pic.loadbalancer.server.port: 3001
+      homepage.group: Apps
+      homepage.name: Immich
+      homepage.icon: immich.png
+      homepage.href: https://pic.{{ tertiary_domain }}/
+      homepage.description: Photo backups
 
   immich_microservices:
     container_name: immich_microservices
