--- a/templates/app01/miniflux.yml
+++ b/templates/app01/miniflux.yml
@@ -37,6 +37,11 @@ services:
       traefik.http.routers.rss.tls.certresolver: default
       traefik.http.services.rss.loadbalancer.server.port: 8080
       traefik.http.routers.rss.middlewares: authelia
+      homepage.group: Apps
+      homepage.name: Miniflux
+      homepage.icon: miniflux.png
+      homepage.href: https://rss.{{ tertiary_domain }}/
+      homepage.description: Feed reader
 
   db:
     container_name: miniflux_db
