--- a/templates/app01/traefik.yml
+++ b/templates/app01/traefik.yml
@@ -15,7 +15,7 @@ services:
       NETWORKS: 1
       SERVICES: 1
       TASKS: 1
-      POST: 0 # default, prevents writes
+      POST: 0 # default, prevents making changes
 
     networks:
       - docker-socket
@@ -49,12 +49,17 @@ services:
       - /etc/localtime:/etc/localtime:ro
 
     labels:
-      - traefik.enable=true
-      - traefik.http.routers.api.rule=Host(`proxy.{{ tertiary_domain }}`)
-      - traefik.http.routers.api.entrypoints=https
-      - traefik.http.routers.api.tls.certresolver=default
-      - traefik.http.routers.api.service=api@internal
-      - traefik.http.routers.api.middlewares=auth
-      - traefik.http.middlewares.auth.basicauth.users=${TRAEFIK_USERS}
+      traefik.enable: true
+      traefik.http.routers.api.rule: Host(`proxy.{{ tertiary_domain }}`)
+      traefik.http.routers.api.entrypoints: https
+      traefik.http.routers.api.tls.certresolver: default
+      traefik.http.routers.api.service: api@internal
+      traefik.http.routers.api.middlewares: auth
+      traefik.http.middlewares.auth.basicauth.users: ${TRAEFIK_USERS}
       # Below will cause Traefik to request a wildcard cert
-      - traefik.http.routers.api.tls.domains[0].main=*.{{ tertiary_domain }}
+      traefik.http.routers.api.tls.domains[0].main: "*.{{ tertiary_domain }}"
+      homepage.group: Admin
+      homepage.name: Traefik
+      homepage.icon: traefik.png
+      homepage.href: https://proxy.{{ tertiary_domain }}/
+      homepage.description: Reverse proxy
